--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,114 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+<?xml version = "1.0" encoding = "utf-8"?>
+<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
+    android:paddingRight = "@dimen/activity_horizontal_margin"
+    android:paddingTop = "@dimen/activity_vertical_margin"
+    android:paddingBottom = "@dimen/activity_vertical_margin" tools:context = ".MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="320dp"
+        android:layout_height="320dp"
+
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/log" />
+
+    <TextView
+        android:id="@+id/pagetitle"
+        android:textSize="74px"
+        android:textColor="#C00B12"
+        android:fontFamily="sans-serif"
+        android:textStyle="bold"
+        android:padding="12dp"
+        android:paddingLeft="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.Beadonor.AppBarOverlay">
+        android:layout_below="@id/imageView"
+        android:text="Sign In Here" />
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.Beadonor.PopupOverlay" />
+    <EditText
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:id = "@+id/username"
+        android:textColor="#FF2020"
+        android:textSize="34px"
+        android:textColorHint="#FF2020"
+        android:hint = "Enter Email / Mobile No."
+        android:focusable = "true"
+        android:padding="20dp"
+        android:layout_marginTop = "10dp"
+        android:layout_below = "@+id/pagetitle"
+        android:layout_alignParentStart = "true"
+        android:drawableLeft="@drawable/baseline_email_24"
+        android:drawablePadding="20dp"
+        android:layout_alignParentEnd = "true" />
 
-    </com.google.android.material.appbar.AppBarLayout>
+    <EditText
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:id = "@+id/password"
+        android:textColor="#FF2020"
+        android:textColorHint="#FF2020"
+        android:hint = "Enter Password"
+        android:focusable = "true"
+        android:padding="20dp"
+        android:layout_marginTop = "10dp"
+        android:layout_below = "@+id/username"
+        android:layout_alignParentStart = "true"
+        android:drawableLeft="@drawable/baseline_lock_24"
+        android:drawablePadding="20dp"
+        android:layout_alignParentEnd = "true" />
 
-    <include layout="@layout/content_main" />
+    <Button
+        android:id="@+id/button"
+        android:background="#FF2020"
+        android:textColor="#FFF"
+        android:layout_width="280dp"
+        android:textSize="44px"
+        android:textStyle="bold"
+        android:layout_below = "@+id/password"
+        android:layout_centerHorizontal="true"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:bottomRightRadius="60dp"
+        android:bottomLeftRadius="60dp"
+        android:topLeftRadius="60dp"
+        android:topRightRadius="60dp"
+        android:text="Sign IN" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/forgetpassword"
+        android:layout_width="182dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="16dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:layout_below="@id/button"
+        android:layout_marginTop="10dp"
+        android:fontFamily="sans-serif"
+        android:padding="12dp"
+        android:paddingLeft="20dp"
+        android:text="Forget Password"
+        android:textColor="#C00B12"
+        android:textSize="44px"
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <TextView
+        android:id="@+id/register_now"
+        android:layout_width="216dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button"
+        android:layout_marginLeft="-153dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/button"
+
+        android:fontFamily="sans-serif"
+        android:padding="12dp"
+        android:paddingLeft="20dp"
+        android:text="Register Now"
+        android:textAlignment="center"
+        android:textColor="#C00B12"
+        android:textSize="44px"
+        android:textStyle="bold" />
+
+
+</RelativeLayout>
